Working in Historia texts blobs.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -44,6 +44,11 @@ code {
     monospace;
 }
 
+/* FORMA CUSTOM PARA LA MANCHA */
+/* Polygon 2 */
+
+/* --------------------------- */
+
 @layer utilities {
   .text-wb-center {
     text-align: -webkit-center;
