Fixing footer style

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -97,6 +97,11 @@ code {
   .h-inherit {
     height: inherit;
   }
+
+  .text-last {
+    text-align-last: center;
+  }
+
   .text-wb-center {
     text-align: -webkit-center;
   }
