--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-.intro-bg {
+.intro {
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url("../src/img/introClubGif.gif");
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   z-index: -5;
   background-attachment: fixed;
   background-position: center;
