--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,7 @@
 
 .intro {
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("../src/img/introClubGif.gif");
+    url("../src/img/introClub.gif");
   height: 100vh;
   width: 100vw;
   z-index: 0;
