--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -146,3 +146,16 @@ code {
     box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   }
 }
+@media (max-height: 607px) {
+  .contenedor-personalizado {
+    padding-bottom: 4rem; /* Da espacio en la parte inferior */
+  }
+  .contenedor-personalizado p{
+    font-size: 1rem;
+  }
+
+  .boton-personalizado {
+    transform: translateY(-25px); /* Sube el botón hacia arriba */
+  }
+}
+
