--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -103,7 +103,17 @@
   font-style: normal;
 }
 
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
+
 body {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  box-sizing: inherit;
+  min-height: 100%;
   margin: 0;
   background-color: rgb(34 33 33);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
