--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Free_Pen";
+  src: url("./assets/fonts/Free_Pen.otf") format("otf"),
+    url("./assets/fonts/Free_Pen.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Hamston";
+  src: url("./assets/fonts/Hamston.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "LOVES";
+  src: url("./assets/fonts/LOVES.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+
 .magicpattern {
   width: 100%;
   height: 100%;
@@ -70,6 +92,24 @@
 
 .rye-regular {
   font-family: "Rye", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.free-pen {
+  font-family: "Free_Pen", normal;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.loves {
+  font-family: "LOVES", normal;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.hamston {
+  font-family: "Hamston", normal;
   font-weight: 400;
   font-style: normal;
 }
