--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -122,7 +122,7 @@ body {
   box-sizing: inherit;
   min-height: 100%;
   margin: 0;
-  background-color: rgb(34 33 33);
+  background-color: #2f0c0d;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -138,10 +138,12 @@ code {
 .flex-flow-noWrap {
   flex-flow: nowrap;
 }
+
 .aspect-3_4 {
   aspect-ratio: 3/4;
 }
-.shadow-blog-main {
+
+.custom-shadow {
   box-shadow: rgb(0, 0, 0) 0px 14px 37px -10px;
 }
 
@@ -150,24 +152,6 @@ code {
 }
 
 @layer utilities {
-  .h-wb-fill {
-    height: -webkit-fill-available;
-  }
-  .h-inherit {
-    height: inherit;
-  }
-
-  .text-last {
-    text-align-last: center;
-  }
-
-  .text-wb-center {
-    text-align: -webkit-center;
-  }
-  .text-wb-center-support {
-    -webkit-text-size-adjust: 100%;
-  }
-
   .shadow-academia {
     box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   }
@@ -176,6 +160,7 @@ code {
   .intro p {
     font-size: 1rem;
   }
+
   .intro img {
     height: 12rem;
   }
