--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -61,6 +61,21 @@ body {
   font-style: normal;
 }
 
+.allura-regular {
+  font-family: "Allura", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+/* <weight>: Use a value from 400 to 700
+ <uniquifier>: Use a unique and descriptive class name */
+.afacad-normal {
+  font-family: "Afacad", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -69,7 +84,7 @@ code {
 /* --- TEXT TAGS --- */
 
 h1 {
-  @apply hamston text-[#CDA053] text-3xl lg:text-4xl xl:text-5xl uppercase;
+  @apply hamston text-[#CDA053] text-3xl lg:text-4xl xl:text-5xl;
 }
 
 h2 {
